# nostrum

./: .gitignore  CMakeLists.txt  COPYING  README.md  nostrum.ini.example
.github/workflows/: cmake-single-platform.yml
docs/: build.md
src/: nostrum-config.c  nostrum-config.h  nostrum-event.c  nostrum-event.h  nostrum-filter.c  nostrum-filter.h  nostrum-json-utils.c  nostrum-json-utils.h  nostrum-msg-close.c  nostrum-msg-close.h  nostrum-msg-closed.c  nostrum-msg-closed.h  nostrum-msg-eose.c  nostrum-msg-eose.h  nostrum-msg-notice.c  nostrum-msg-notice.h  nostrum-msg-ok.c  nostrum-msg-ok.h  nostrum-msg-req.c  nostrum-msg-req.h  nostrum-relay.c  nostrum-relay.h  nostrum-storage-sqlite.c  nostrum-storage.h  nostrum-subscription.c  nostrum-subscription.h  nostrum-utils.c  nostrum-utils.h  nostrum-version.h.in  nostrum.c
tests/: event-test.c  filter-test.c  msg-close-test.c  msg-closed-test.c  msg-eose-test.c  msg-notice-test.c  msg-ok-test.c  msg-req-test.c  server-test.c  storage-test.c
tests/python/: perftest.py
